--- a/public/categories.html
+++ b/public/categories.html
@@ -138,7 +138,7 @@
             </ul> <br>
             <div>
                 <ul class="list-group col-sm-6 col-sm-offset-3">
-                  <li class="list-group-item list-group-item-info">Courses<div class="pull-right">Votes Rating</div></li>
+                  <li class="list-group-item list-group-item-info">Courses<div class="pull-right">Rating Votes</div></li>
                   <li class="list-group-item" ng-repeat="x in topList"> {{ x.rank + ') '}}<a href="course?id={{x.id}}">{{x.title}}</a>
                     <span class="badge" data-toggle="tooltip" title="# of votes">{{x.votes}}</span>
                     <span class="badge  badge-success" data-toggle="tooltip" title="rating">{{x.rating}}</span>
