--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
             <div ng-repeat="x in userList" class="text-center"><hr>
                <h4><a href="profile?screen_name={{x.screen_name}}">{{x.screen_name}}</a></h4>
                Email: {{x.email}} <br>
-               Courses Created: {{length(x.courses_created)}}
+               Courses Created: {{length(x.courses_created)}} <br><br>
             </div>
            </div>
          </div>
