--- a/public/categories.html
+++ b/public/categories.html
@@ -55,7 +55,7 @@
   <p>Select one of these categories and browse through the courses offered in that subject area</p>
   <a href="" ng-show="!show" ng-click="show = !show" class="btn btn-primary">Look At Top 10 Courses</a>
   <a href="" ng-show="show"  ng-click="show = !show" class="btn btn-primary">Look At Categories</a>
-</div>
+</div> <br>
 
 <div ng-hide="show">
   <div class="container text-center">    
