--- a/public/edit-course.html
+++ b/public/edit-course.html
@@ -213,7 +213,7 @@
 			<div class="jumbotron text-center">
 				<h1>Course Editing Page</h1>
 				<p>Course ID: {{id}}</p>
-			</div>
+			</div> <br>
 			<div class="container-fluid" ng-init="init()">
 				<div class="col-sm-6" ng-controller="save">
 					<div class="panel panel-default">
