--- a/public/coursecreation.html
+++ b/public/coursecreation.html
@@ -69,7 +69,7 @@
       <div class="jumbotron text-center">
          <h1>Course Creation Page</h1>
          <p>Create Your Course For Everyone To See</p>
-      </div>
+      </div> <br>
          <div class="container-fluid" ng-controller="create" ng-init="initCourseCreation()">
             <form id="create" class="form-horizontal" ng-submit="sendPost()" autocomplete=off>
                <fieldset class="col-sm-8 col-sm-offset-2">
