--- a/public/navbar.html
+++ b/public/navbar.html
@@ -1,6 +1,8 @@
+<!--Checks session user and determine the layout of nav bar-->
 <div user-login></div>
 <nav class="navbar navbar-inverse navbar-fixed-top">
    <div class="container-fluid">
+   	<!--Collapsing the nav bar-->
       <div class="navbar-header">
          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
          <span class="icon-bar"></span>
@@ -10,11 +12,13 @@
          <a class="navbar-brand" style="color:white;"><span class="glyphicon glyphicon-education"></span> Learnology</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
+      	<!--Left Side Buttons-->
          <ul class="nav navbar-nav">
             <li ng-class="{ active: isActive('/')}"><a href="/">Home</a></li>
             <li ng-class="{ active: isActive('/categories')}"><a href="categories">Categories</a></li>
             <li ng-class="{ active: isActive('/coursecreation')}" class="user" style="display:none"><a href="coursecreation">Create a Course</a></li>
          </ul>
+         <!-- Search Form -->
          <ul class="nav navbar-nav">
             <div class="col-sm-12 col-md-12">
                <form name="searchform" class="navbar-form" action="search" method="GET">
@@ -37,6 +41,7 @@
                </form>
             </div>
          </ul>
+         <!--Right Side Buttons-->
          <ul class="nav navbar-nav navbar-right">
             <li ng-class="{ active: isActive('/admin')}" class="admin" style="display:none"><a href="admin">ADMIN</a></li>
             <li class="user" ng-class="{ active: isActive('/profile')}" style="display:none"><a ng-href="profile?screen-name={{loggedInUser}}" id="screenName"></a></li>
@@ -48,7 +53,7 @@
    </div>
 </nav>
 
-<!-- Modal -->
+<!-- Modal for logging in -->
 <div class="modal fade" id="loginModal" role="dialog">
    <div class="modal-dialog">
 
@@ -59,6 +64,7 @@
       <h4 class="modal-title">Please Login</h4>
       </div>
       <div class="modal-body">
+      	<!--Standard Login Form-->
          <form role="form" class="form-signin" name="loginForm" ng-controller="login" ng-submit="sendPost()" autocomplete=off>
 			<div class="form-group">
 				<label for="inputUsername" class="sr-only">Email</label>
@@ -76,6 +82,7 @@
          </form>
          <br>
          <hr>
+         <!--Facebook Login Button-->
          <div class="text-center">Or Login With <br>
             <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
             </fb:login-button>
@@ -92,7 +99,7 @@
    </div>
 </div>
 
-<!-- Modal -->
+<!-- Modal for sign up -->
 <div class="modal fade" id="signupModal" role="dialog" >
    <div class="modal-dialog">
 
@@ -102,6 +109,7 @@
             <button type="button" class="close" data-dismiss="modal">&times;</button>
             <h4 class="modal-title">Sign Up</h4>
          </div>
+         <!--Sign up form-->
          <div class="modal-body" ng-controller="signUpFormCtrl">
             <form role="form" class="form-signin" name="signupForm" action="/users/user" method="POST" autocomplete=off>
 				<div class="form-group">
@@ -137,7 +145,7 @@
    </div>
 </div>
 
-<!-- Modal -->
+<!-- Modal for logout confirmation -->
 <div class="modal fade" id="logoutModal" role="dialog">
    <div class="modal-dialog">
 
