--- a/public/admin.html
+++ b/public/admin.html
@@ -13,12 +13,15 @@
   <script src="scripts/admincontroller.js"></script>
 </head>
 <body ng-app="learnologyApp" >
+	<!--Facebook Login Functionality-->
  <script src="scripts/facebooklogin.js"></script>
+ <!--Nav bar html-->
 <div ng-controller="navCtrl"> 
   <div ng-include="'navbar.html'"></div>
 </div> <br>
 
 <div style="height:600px;" ng-controller="list">
+	<!-- Left nav bar for changing between course and user list-->
   <nav class="col-sm-3">
     <ul class="nav nav-pills nav-stacked">
       <input type="hidden" ng-model="use">
@@ -26,8 +29,10 @@
       <li ng-class="{ 'active': !use}"><a ng-click="getlist('Courses')">Courses</a></li>
     </ul>
     <br>
+    <!--Open modal to set a user as admin-->
     <button class="btn btn-default" data-toggle="modal" data-target="#adminModal" type="set">Make Admin</button>
   </nav>
+  <!--Right side list output-->
   <div class="col-sm-9">
     <div class="panel panel-primary " > 
       <div class="panel-heading">{{title}} List</div>
