--- a/public/aboutus.html
+++ b/public/aboutus.html
@@ -20,7 +20,9 @@
 </head>
 
 <body ng-app="learnologyApp" >
+  <!--Facebook login functionality-->
  <script src="scripts/facebooklogin.js"></script>
+ <!-- Nav bar html-->
   <div ng-controller="navCtrl"> 
     <div ng-include="'navbar.html'"></div>
   </div> 
@@ -32,7 +34,7 @@
   <div class="container">
     
     <h1>About Us</h1>
-
+    <!--Our names-->
     <p>We're a group of four CSC309 students: </p>
     <p>Sky (Si Qi) Zhou</p>
     <p>Yijin Wang</p>
@@ -40,7 +42,7 @@
     <p>Athavan Karunakaran</p>
 
     <h1>Contact Info</h1>
-
+    <!--Table of info-->
     <div class="cssTable" id="studentInfo">
       <div class="cssTableBody">
         <div class="cssTableRow">
