--- a/public/search.html
+++ b/public/search.html
@@ -20,12 +20,16 @@
 </head>
 
 <body ng-app="learnologyApp" >
+  <!--Facebook login functionality-->
   <script src="scripts/facebooklogin.js"></script>
+  <!--Directive to get the search results based on parameters-->
  <div search-res></div>
+ <!--Nav bar html-->
   <div ng-controller="navCtrl"> 
     <div ng-include="'navbar.html'"></div>
   </div> 
 
+   <!--Output layout-->
   <div class="container">
     <h1>Search Results</h1>
    
